...

    var typedLocality by rememberSaveable { mutableStateOf("") }
    var l1ToOCResult by rememberSaveable { mutableStateOf("") }

    HorizontalPager(
        state = pagerState,
        modifier = Modifier.fillMaxSize().testTag("MainPager")
    ) { page ->
        when (page) {
            0 -> OCToL1Screen(
                vPadding = vPadding,
                typedOCArea = typedOCArea,
                onTypedOCAreaChange = { typedOCArea = it },
...
